# generative-inverse-design

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: ci.yml  data-module.yml
src/data-module/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
src/data-module/.devcontainer/: .env  devcontainer.json  docker-compose.yml
src/data-module/data_module/: __init__.py  main.py
src/data-module/docs/: index.md  reference.md
