[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-module"
version = "0.0.1"
requires-python = "~=3.13"
description = "Data module for generative inverse design"
authors = [{ name = "Evans Doe Ocansey", email = "evans@aims.ac.za" }]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  # "torch>=2.5.1,<2.6.0",
]

[project.urls]
Repository = "https://github.com/evansdoe/generative-inverse-design"

[tool.uv]
environments = ["python_version == '3.13'"]

# [[tool.uv.index]]
# name = "risc-pypi"
# url = "https://pypinexus01.risc-software.at/repository/pypi/simple/"
# explicit = true

# Uncomment for GPU support:
# [[tool.uv.index]]
# # The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
# name = "pytorch-cu124"
# url = "https://download.pytorch.org/whl/cu124"
# explicit = true
#
# [tool.uv.sources]
# # The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
# torch = [
#   {index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
# ]
# torchvision = [
#   {index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
# ]

[tool.hatch.build.targets.sdist]
include = ["data_module"]

[tool.hatch.build.targets.wheel]
include = ["data_module"]

[dependency-groups]
dev = [
  "poethepoet>=0.20.0",
  "black[jupyter]>=23.3.0",
  "ruff>=0.0.272",
  "isort>=5.12.0",
  "pytest>=7.3.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.1",
  "mkdocs>=1.4.3",
  "mkdocs-material>=9.1.15",
  "mkdocstrings[python]>=0.22.0",
  "liccheck>=0.9.2",
  # pinned for liccheck
  "setuptools==78.1.0",
  # added for liccheck
  "pip>=25.0.1",
]

[tool.poe.tasks]
# https://github.com/nat-n/poethepoet
_format = "black ."
_sort_imports = "isort ."
_lint = "ruff check --fix ."

_check_format = "black --check ."
_check_sort_imports = "isort --check ."
_check_lint = "ruff check ."

# if you are using uv for dependency management, you have to generate a requirements.txt first
_convert_to_req_txt = "uv export --no-hashes --format=requirements-txt -o requirements.txt"
# check authorization of the licenses of dependencies as defined in [tool.liccheck] section 
# (or a separate liccheck.ini-file)
_check_licenses = "liccheck -r requirements.txt"

check_licenses = [
    "_convert_to_req_txt",
    "_check_licenses",
]

docs = "mkdocs serve"
precommit = ["_format", "_sort_imports", "_lint"]
check = ["_check_format", "_check_sort_imports", "_check_lint", "check_licenses"]
test = "pytest"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 120
target-version = ["py313"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files
profile = "black"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/reference/customize.html
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --cov-report xml:coverage.xml --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["data_module"]
testpaths = ["data_module", "tests"]
# ignore any of these paths
norecursedirs = [ ]

[tool.ruff]
# https://github.com/charliermarsh/ruff
fix = true
line-length = 120
src = ["data_module", "tests"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.liccheck]
# see also: https://pypi.org/project/liccheck/
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd-3-clause",
  "bsd 3-clause",
  "bsd license",
  "isc",
  "isc license",
  "isc license (iscl)",
  "apache",
  "apache-2.0",
  "apache 2.0",
  "apache software",
  "apache software license",
  "apache license, version 2.0",
  "gnu lgpl",
  "historical permission notice and disclaimer (hpnd)",
  "lgpl with exceptions or zpl",
  "mozilla public license 2.0 (mpl 2.0)",
  "mit",
  "mit license",
  "new bsd license",
  "python software foundation license",
  "python software foundation",
  "psf-2.0",
  "simplified bsd",
  "the unlicense (unlicense)",
  "bsd-2-clause",
  "cc-by",
  "mit-cmu",
  "bsd 3 clause",
  "gnu library or lesser general public license (lgpl)",
  "mit and bsd-3-clause",
  "licenseRef-nvidia-proprietary",
  "apache-2.0 and bsd-2-clause",
  "mpl-2.0 and mit" 
]
# as_regex = true -> e.g. '\bgpl'
unauthorized_licenses = [
  "gpl v3",
  "gnu general public license v2 or later (gplv2+)",
]
level = "standard"  # alternatives: "cautious", "paranoid"
requirement_txt_file = "./requirements.txt"
reporting_txt_file = "./liccheck_reporting.txt" # by default is None

[tool.liccheck.authorized_packages]
# Python software license (see http://zesty.ca/python/uuid.README.txt)
uuid = "1.30"
matplotlib-inline = ">=0.1.0"
